...
            "state" : "translated",
            "value" : "Rakiplerinizle karşılaşın ve liderlik tablosunda üst sıralara çıkın. Puan tablomuz sayesinde, kendi skolarınızı ve diğer kullanıcıların başarılarını takip edebilirsiniz. Başarılar!"
          }
        }
      }
    },
    "Confirm Delete" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Silmeyi Onayla"
          }
...
            "state" : "translated",
            "value" : "Tarih: %@"
          }
        }
      }
    },
    "Delete Account" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hesabı Sil"
          }
...
            "state" : "translated",
            "value" : "Hesabınız yok mu?"
          }
        }
      }
    },
    "Easy" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kolay"
          }
...
            "state" : "translated",
            "value" : "Oyun"
          }
        }
      }
    },
    "GAME OVER!" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Oyun Bitti!"
          }
...
            "state" : "translated",
            "value" : "Skorlar yükleniyor.."
          }
        }
      }
    },
    "Log Out" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Çıkış Yap"
          }
        }
      }
    },
    "Login" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Giriş Yap"
          }
...
            "state" : "translated",
            "value" : "Orta"
          }
        }
      }
    },
    "Multiple Choice" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Çoktan seçmeli"
          }
...
            "state" : "translated",
            "value" : "Uygulamamızda birçok oyun kategorisi bulabilirsiniz: Filmler, kitaplar, doğa, spor, müzik ve daha fazlası! İhtiyacınıza uygun oyunları keşfedin ve keyfini çıkarın."
          }
        }
      }
    },
    "Play Again" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tekrar Oyna"
          }
...
            "state" : "translated",
            "value" : "Lütfen bir ikon seçin."
          }
        }
      }
    },
    "Previous Scores" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Geçmiş Skorlar"
          }
        }
      }
    },
    "Profile" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profil"
          }
...
            "state" : "translated",
            "value" : "Profil bilgileri başarıyla kaydedildi!"
          }
        }
      }
    },
    "Profile Settings" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profil Ayarları"
          }
...
            "state" : "translated",
            "value" : "Kayıt ol"
          }
        }
      }
    },
    "Reset Password" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Şifreyi Yenile"
          }
...
            "state" : "translated",
            "value" : "Seçildi"
          }
        }
      }
    },
    "Sign In" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Giriş Yap"
          }
...
            "state" : "translated",
            "value" : "ATLA"
          }
        }
      }
    },
    "Start!" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Başla!"
          }
...
            "state" : "translated",
            "value" : "Tekrar Hoş Geldin"
          }
        }
      }
    },
    "Welcome Quiz App!" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Quiz App'e Hoş Geldin!"
          }
...
            "state" : "translated",
            "value" : "Quiz App'e Hoş Geldin!"
          }
        }
      }
    },
    "Yes" : {
      "localizations" : {
        "tr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Evet"
          }
...
