...
            .hidden()

            AuthHeaderView(title1: "Hello,", title2: "Welcome back")
            VStack(spacing: 40) {
                CustomInputField(
                    imageName: "envelope",
                    placeholderText: "Email",
                    textCase: .lowercase,
                    keyboardType: .emailAddress,
                    textContentType: .emailAddress,
                    text: self.$viewModel.email
                )

                CustomInputField(
                    imageName: "lock",
                    placeholderText: "Password",
                    textCase: .lowercase,
                    keyboardType: .default,
                    textContentType: .password,
                    isSecureField: true,
                    text: self.$viewModel.password
                )
...
