...
                                    .shadow(color: .purple, radius: 5, x: 5, y: 5)
                            }

                            Button(action: {
                                self.navigateToProfileSettingsView = true
                            }) {
                                Image(systemName: "pencil.and.scribble")
                                    .foregroundColor(.white)
                                    .padding(10)
                                    .background(Color.pink)
                                    .clipShape(Circle())
                                    .shadow(radius: 5)
                            }
...
