...
    public var difficulty: String
    public var question: String
    public var correct_answer: String
    public var incorrect_answers: [String]

    public init() {
        self.category = "Geography"
        self.type = "multiple"
        self.difficulty = "medium"
        self.question = "Which country inside the United Kingdom does NOT appear on its flag, the Union Jack?"
        self.correct_answer = "Wales"
        self.incorrect_answers = ["Scotland", "Ireland", "Isle of Wight"]
    }
...
